# text_from_wellreport

./: .gitignore  README.md  WellReportProcessor.spec  app.py  build_dist.ps1  launch.bat  launch.ps1  main.py  paths.py  process_report.py  pyproject.toml  rag.py  reg_expressions.py  well_test_data_paths.json
